; ModuleID = '/home/carl/AnghaBench/radare2/shlr/tcc/extr_tccpp.c_handle_stray1.c'
source_filename = "/home/carl/AnghaBench/radare2/shlr/tcc/extr_tccpp.c_handle_stray1.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i8**, i8** }

@file = common dso_local global %struct.TYPE_2__* null, align 8
@ch = common dso_local global i8* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8**)* @handle_stray1 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @handle_stray1(i8** %0) #0 {
  %2 = alloca i8**, align 8
  %3 = alloca i32, align 4
  store i8** %0, i8*** %2, align 8
  %4 = load i8**, i8*** %2, align 8
  %5 = load %struct.TYPE_2__*, %struct.TYPE_2__** @file, align 8
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 0
  %7 = load i8**, i8*** %6, align 8
  %8 = icmp uge i8** %4, %7
  br i1 %8, label %9, label %21

9:                                                ; preds = %1
  %10 = load i8**, i8*** %2, align 8
  %11 = load %struct.TYPE_2__*, %struct.TYPE_2__** @file, align 8
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 1
  store i8** %10, i8*** %12, align 8
  %13 = call i32 (...) @handle_eob()
  store i32 %13, i32* %3, align 4
  %14 = load %struct.TYPE_2__*, %struct.TYPE_2__** @file, align 8
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 1
  %16 = load i8**, i8*** %15, align 8
  store i8** %16, i8*** %2, align 8
  %17 = load i32, i32* %3, align 4
  %18 = icmp eq i32 %17, 92
  br i1 %18, label %19, label %20

19:                                               ; preds = %9
  br label %22

20:                                               ; preds = %9
  br label %35

21:                                               ; preds = %1
  br label %22

22:                                               ; preds = %21, %19
  %23 = load i8**, i8*** %2, align 8
  %24 = load %struct.TYPE_2__*, %struct.TYPE_2__** @file, align 8
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %24, i32 0, i32 1
  store i8** %23, i8*** %25, align 8
  %26 = load i8**, i8*** %2, align 8
  %27 = load i8*, i8** %26, align 8
  store i8* %27, i8** @ch, align 8
  %28 = call i32 (...) @handle_stray()
  %29 = load %struct.TYPE_2__*, %struct.TYPE_2__** @file, align 8
  %30 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %29, i32 0, i32 1
  %31 = load i8**, i8*** %30, align 8
  store i8** %31, i8*** %2, align 8
  %32 = load i8**, i8*** %2, align 8
  %33 = load i8*, i8** %32, align 8
  %34 = ptrtoint i8* %33 to i32
  store i32 %34, i32* %3, align 4
  br label %35

35:                                               ; preds = %22, %20
  %36 = load i32, i32* %3, align 4
  ret i32 %36
}

declare dso_local i32 @handle_eob(...) #1

declare dso_local i32 @handle_stray(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
